@@ -249,6 +249,7 @@ namespace libtorrent
 		, m_interface_index(0)
 		, m_progress_ppm(0)
 		, m_inactive_counter(0)
+		, m_use_resume_save_path(p.flags & add_torrent_params::flag_use_resume_save_path)
 	{
 		// if there is resume data already, we don't need to trigger the initial save
 		// resume data
@@ -1485,6 +1486,17 @@ namespace libtorrent
 			set_error(errors::torrent_invalid_length, "");
 			pause();
 			return;
+		}
+
+		// Chicken-and-egg: need to load resume data to get last save_path
+		// before constructing m_owning_storage, but need storage before
+		// loading resume data. So peek ahead in this case.
+		// only do this if the user is willing to have the resume data
+		// settings override the settings set in add_torrent_params
+		if (!m_use_resume_save_path && m_resume_entry.type() == lazy_entry::dict_t)
+		{
+			std::string p = m_resume_entry.dict_find_string_value("save_path");
+			if (!p.empty()) m_save_path = p;
 		}
 
 		// the shared_from_this() will create an intentional
@@ -5197,6 +5209,12 @@ namespace libtorrent
 		m_last_download = rd.dict_find_int_value("last_download", 0);
 		m_last_upload = rd.dict_find_int_value("last_upload", 0);
 
+		if (!m_use_resume_save_path)
+		{
+			std::string p = rd.dict_find_string_value("save_path");
+			if (!p.empty()) m_save_path = p;
+		}
+
 		m_url = rd.dict_find_string_value("url");
 		m_uuid = rd.dict_find_string_value("uuid");
 		m_source_feed_url = rd.dict_find_string_value("feed");
@@ -5395,6 +5413,8 @@ namespace libtorrent
 		ret["last_scrape"] = m_last_scrape;
 		ret["last_download"] = m_last_download;
 		ret["last_upload"] = m_last_upload;
+
+		ret["save_path"] = m_save_path;
 
 		if (!m_url.empty()) ret["url"] = m_url;
 		if (!m_uuid.empty()) ret["uuid"] = m_uuid;
@@ -6676,6 +6696,8 @@ namespace libtorrent
 
 			m_save_path = save_path;
 #endif
+			m_need_save_resume_data = true;
+
 			if (alerts().should_post<storage_moved_alert>())
 			{
 				alerts().post_alert(storage_moved_alert(get_handle(), m_save_path));
@@ -6694,6 +6716,7 @@ namespace libtorrent
 			if (alerts().should_post<storage_moved_alert>())
 				alerts().post_alert(storage_moved_alert(get_handle(), j.str));
 			m_save_path = j.str;
+			m_need_save_resume_data = true;
 			if (ret == piece_manager::need_full_check)
 				force_recheck();
 		}
